v 2.0.0
=======
(internal) simplified timeout management classes and representations.
(internal) Async/Collection's find_one method uses findOne API command.
Removed the CommandCursor/AsyncCommandCursor classes:
  - AstraDBAdmin's `list_databases`, `async_list_databases` methods return regular lists
  - Database's `list_collections`, `list_tables` methods return regular lists
  - AsyncDatabase's `list_collections`, `list_tables` methods have become awaitable and return regular lists
Remove 'check_exists' from [Async]Database `create_collection` method (always False now)
Remove `CollectionAlreadyExistsException` class (not used anymore without `check_exists`)
Signature change from `-> {"ok": 1}` to `-> None` for some admin and schema methods:
    - AstraDBAdmin: `drop_database` (+ async)
    - AstraDBDatabaseAdmin, DataAPIDatabaseAdmin: `create_keyspace`, `drop_keyspace`, `drop` (+ async)
    - Database, AsyncDatabase: `drop_collection`, `drop_table`
    - Collection, AsyncCollection: `drop`
Support for arbitrary 'database' and 'admin' headers throughout the object chain
Rename `CollectionVectorServiceOptions` class to `VectorServiceOptions`
Removed "raw_options" attribute from CollectionOptions class (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
Reworked the options system:
    - an APIOptions object inherited at each "spawn" operation, with overrides
    - environment-dependent defaults if nothing supplied
    - "spawn" operations expose top-level aliases for selected settings
    - per-method overrides. For timeouts, `max_time_ms` becomes an alias for more specific timeout types
    - collection and database's `info` method gets timeout parameters
    - (not user-facing) classes in the hierarchy other than DataAPIClient have breaking changes in their constructor (now options-first and keyword-arg-only)
Major restructuring of the codebase into directories
    - BaseCursor not exported by astrapy.cursors anymore