@@ -393,7 +393,6 @@ class TestDMLSync:
         cursor1.rewind()
 
         # address, cursor_id, collection
-        assert cursor1.address == sync_empty_collection._api_commander.full_path
         assert isinstance(cursor1.cursor_id, int)
         assert cursor1.data_source == sync_empty_collection
 
